2024-06-16T00:47:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9532051791 # 328
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-16
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 833 1308 / 838 1313
* notice: next accum: outdated-unq outdated-all / unq all: 834 1309 / 839 1314
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-06-02] / [2024-06-15]

2024-06-15T00:42:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9524071747 # 327
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-15
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 830 1305 / 838 1313
* notice: next accum: outdated-unq outdated-all / unq all: 833 1308 / 838 1313
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-31 2024-06-01] / []

2024-06-14T00:42:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9508779783 # 326
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-14
* notice: last 14d: unq all: 3 7
* notice: prev accum: outdated-unq outdated-all / unq all: 828 1303 / 838 1313
* notice: next accum: outdated-unq outdated-all / unq all: 830 1305 / 838 1313
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
* notice: removed / changed dates: [2024-05-30] / [2024-05-31]

2024-06-13T00:42:59Z: