@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-16T00:47:33Z",
-  "count_outdated" : 1309,
-  "uniques_outdated" : 834,
+  "timestamp" : "2024-06-17T00:45:10Z",
+  "count_outdated" : 1310,
+  "uniques_outdated" : 835,
   "count" : 1314,
   "uniques" : 839,
   "clones" : [
-    {
-      "timestamp": "2024-06-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-06-04T00:00:00Z",
       "count": 1,
