@@ -1,3 +1,12 @@
+2024-06-17T00:45:10Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9540176193 # 329
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-17
+* notice: last 14d: unq all: 3 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 834 1309 / 839 1314
+* notice: next accum: outdated-unq outdated-all / unq all: 835 1310 / 839 1314
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-06-03] / []
+
 2024-06-16T00:47:33Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9532051791 # 328
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-16
